k8s/ingress.yaml
# k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: news-feed-ingress
  namespace: drone-builds
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  labels:
    app: news-feed
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - news-feed.mahbod-ghadiri-sani.net
      secretName: news-feed-tls
  rules:
    - host: news-feed.mahbod-ghadiri-sani.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: news-feed-service
                port:
                  number: 80
